Added Block and UnBlock button

--- a/TaskFour/Views/Shared/EditorTemplates/User.cshtml
+++ b/TaskFour/Views/Shared/EditorTemplates/User.cshtml
@@ -3,7 +3,7 @@
 
 <tr>
 	<td>
-		<input type="checkbox" id="deleteById" name="deleteById" value="@Model.Id" class="custom-checkbox chkCheckBoxId" />
+		<input type="checkbox" id="deleteBlock" name="deleteBlock" value="@Model.Id" class="custom-checkbox chkCheckBoxId" />
 	</td>
 	<td>@Model.Name</td>
 	<td>@Model.Email</td>
