--- a/TaskFour/Views/Shared/_Layout.cshtml
+++ b/TaskFour/Views/Shared/_Layout.cshtml
@@ -9,18 +9,15 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/css/position.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 </head>
 <body>
-    <header>
-        <nav id="navbar" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header class="fixed-header z-index-header">
+        <nav id="navbar" class="navbar navbar-expand navbar-light bg-white border-bottom box-shadow">
             <div class="container bg-info">
-                @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Task_4_Itransion</a>*@
-                @* <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>*@
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="">
+                    <ul class="navbar-nav">
                         @if (signManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
@@ -72,17 +69,15 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Register">Sign up</a>
                             </li>
                         }
-
-
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container position-relative joylashuv align-items-center">
+        <div role="main" class="joylashuv z-index-body align-items-center justify-content-center">
             @RenderBody()
-        </main>
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
@@ -92,7 +87,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>    
     @await RenderSectionAsync("Scripts", required: false)
 
 </body>
