--- a/TaskFour/Views/User/Info.cshtml
+++ b/TaskFour/Views/User/Info.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IQueryable<User>
 
 <script src="~/lib/jquery/jquery.min.js" type="text/javascript"></script>
+<link href="~/css/position.css" rel="stylesheet" />
 <script type="text/javascript" language="javascript">
      $(function(){
 
@@ -28,55 +29,69 @@
             }
         });
 
-        //$("#blockBtn").click(function () {
-        //    var count = $("input[name='blockById']:checked").length;
-        //    if (count == 0) {
-        //        alert("No rows selected to block");
-        //        return false;
-        //    }
-        //    else {
-        //        return confirm(count + " row(s) will be blocked!");
-        //    }
-        //});
+        $("#blockBtn").click(function () {
+            var count = $("input[name='deleteBlock']:checked").length;
+            if (count == 0) {
+                alert("No rows selected to block");
+                return false;
+            }
+            else {
+                return confirm(count + " row(s) will be blocked!");
+            }
+        });
+        $("#UnblockBtn").click(function () {
+            var count = $("input[name='deleteBlock']:checked").length;
+            if (count == 0) {
+                alert("No rows selected to block");
+                return false;
+            }
+            else {
+                return confirm(count + " row(s) will be unblocked!");
+            }
+        });
      });
 </script>
 
-<div class="container py-4">
-	<div class="card">
-		<div class="card-header bg-primary text-white">
-			<h5>Employee Lists</h5>
+<div class="container">
+    <div class="card">
+		<div class="card-header bg-primary text-white position-sticky sticky-top-header ">
+			<h5>Users list</h5>
 		</div>
-		<div class="card-body">
+        <div class="card-body table-wrapper-scroll-y my-custom-scrollbar">
 			@*@using (Html.BeginForm("Delete", "User", FormMethod.Post))
 			{*@
                 <form asp-action="" asp-controller="User" method="post">
+				    <table class="table table-bordered table-striped">
+                    <thead class="position-sticky sticky-top bg-secondary table-header-sticky">
+						    <tr>
+							    <th>
+                                    <input type="checkbox" id="checkAll"/>
+                                </th>
+							    <th>Name</th>
+							    <th>Email</th>
+							    <th>Registration time</th>
+							    <th>Last login time</th>
+							    <th>Status</th>
+							    <th>Delete</th>
 
-                
-				<table class="table table-bordered">
-					<thead>
-						<tr>
-							<th>
-                                <input type="checkbox" id="checkAll"/>
-                            </th>
-							<th>Name</th>
-							<th>Email</th>
-							<th>Register Date</th>
-							<th>Last Login Date</th>
-							<th>IsActive</th>
-							<th>Delete</th>
-
-						</tr>
-					</thead>
-					<tbody>
+						    </tr>
+					    </thead>
+					    <tbody>
 						@Html.EditorForModel()
 					</tbody>
 				</table>
-                <input type="submit" id="deleteBtn" value="Delete users" class="btn btn-primary" formaction="Delete"/> 
-                <input type="submit" id="blockBtn" value="Block users" class="btn btn-primary" formaction="Block"/>
-                <input type="submit" id="blockBtn" value="Unblock users" class="btn btn-primary" formaction="UnBlock"/>
+              @*  buttons*@
+                <div class="d-flex justify-content-center">
+                    <input id="blockBtn" type="submit" value="Block" class="btn bg-danger text-light mr-2" formaction="Block" />
+                    <button id="UnblockBtn" type="submit" formaction="UnBlock" class="btn btn-primary"><i class="fa fa-unlock" aria-hidden="true"></i></button>
+                    <button id="deleteBtn" type="submit" class="btn btn-primary ml-2" formaction="Delete"><i class="fa-solid fa-trash"></i></button>
+                </div>
                 </form>
 			@*}*@
 		</div>
+      
 	</div>
+    
 </div>
+
 
