--- a/TaskFour/Views/User/Register.cshtml
+++ b/TaskFour/Views/User/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Registration";
 }
 
-<div class="container  align-content-center">
+<div class="container">
     <h1>Register</h1>
 
     <hr />
@@ -12,16 +12,6 @@
         <div class="col-md-4">
             <form asp-action="Register">
                 <div asp-validation-summary="All" class="text-danger"></div>
-              @*  <div class="form-group">
-                    <label asp-for="FirstName" class="control-label"></label>
-                    <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LastName" class="control-label"></label>
-                    <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-danger"></span>
-                </div>*@
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
@@ -44,26 +34,6 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
               
-                @* <div class="form-group">
-                <label asp-for="LastLoginTime" class="control-label"></label>
-                <input asp-for="LastLoginTime" class="form-control" />
-                <span asp-validation-for="LastLoginTime" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                <label asp-for="RegistrationTime" class="control-label"></label>
-                <input asp-for="RegistrationTime" class="form-control" />
-                <span asp-validation-for="RegistrationTime" class="text-danger"></span>
-                </div>*@
-                @* <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-                </div>
-                <div class="form-group form-check">
-                <label class="form-check-label">
-                <input class="form-check-input" asp-for="IsChecked" /> @Html.DisplayNameFor(model => model.IsChecked)
-                </label>
-                </div>*@
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
@@ -72,9 +42,6 @@
     </div>
 
 </div>
-@*<div>
-    <a asp-action="Index">Back to List</a>
-</div>*@
 
 @section Scripts {
     @{
