--- a/TaskFour/Views/Shared/_Layout.cshtml
+++ b/TaskFour/Views/Shared/_Layout.cshtml
@@ -74,17 +74,12 @@
             </div>
         </nav>
     </header>
-    <div class="container position-relative joylashuv align-items-center">
-        <div role="main" class="joylashuv z-index-body align-items-center justify-content-center">
+    <div class="container position-relative joylashuv">
+        <div role="main" class="joylashuv z-index-body ">
             @RenderBody()
         </div>
     </div>
 
-    <footer class="border-top footer text-muted">
-      @*  <div class="container">
-            &copy; 2022 - Task_4_Itransion - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>*@
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>    
