--- a/TaskFour/wwwroot/css/Position.css
+++ b/TaskFour/wwwroot/css/Position.css
@@ -39,3 +39,15 @@
     display:block;
 }
 
+.login-container{
+    align-content:center;
+    width:600px;
+    margin:auto;
+    background-color:green;
+    padding:20px;
+    border-radius:30px;
+}
+/*.login-container input{
+    display:flex;
+    width:auto;
+}*/
