--- a/TaskFour/Views/User/Login.cshtml
+++ b/TaskFour/Views/User/Login.cshtml
@@ -2,54 +2,94 @@
 @model TaskFour.ViewModels.LoginViewModel
 
 @{
-    ViewData["Title"] = "Login";
+	ViewData["Title"] = "Login";
 }
 
+<div class="container col-md-4 bg-info p-4">
+	<div >
+		<h1 class="text-center">Login</h1>
+		<hr />
+	</div>
 
-   <div class="container login-container">
-   <div class="text-center">
-        <h1>Login</h1>
-        <hr />
-   </div>
+	<div>
+		<div>
+			<form asp-action="Login">
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				<div class="form-group form-floating">
+					<label asp-for="Email" for="emailFloating" class="control-label"></label>
+					<input asp-for="Email" id="emailFloating" class="form-control " />
+					<span asp-validation-for="Email" class="text-danger"></span>
+				</div>
+
+				<div class="form-group">
+					<label asp-for="Password" class="control-label"></label>
+					<input asp-for="Password" class="form-control" type="password" />
+					<span asp-validation-for="Password" class="text-danger"></span>
+				</div>
+
+				<div class="form-group">
+					<div class="checkbox">
+						<label asp-for="RememberMe">
+							<input asp-for="RememberMe" />
+							@Html.DisplayNameFor(m => m.RememberMe)
+						</label>
+					</div>
+				</div>
+
+				<h6>@ViewBag.Error</h6>
+			@*	<div class="form-group">
+					<input type="submit" value="Login" class="btn btn-primary" />
+				</div>*@
+				<div class="container">
+					<div class="row">
+						<div class="col text-center">
+							<button class="btn btn-primary">Login</button>
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
 
 
-    <div class="justify-content-center">
-        <div class="">
-            <form asp-action="Login">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group form-floating">
-                    <label asp-for="Email" for="emailFloating" class="control-label"></label>
-                    <input asp-for="Email" id="emailFloating" class="form-control " />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
+@*<div class="container1">
+	<div class="second">
+		<img src="~/css/login-img.png" />
+	</div>
+	<form class="first">
+		<h3>Login</h3>
+		<div asp-validation-summary="All" class="text-danger"></div>
+		<div class="form-group form-floating">
+			<label asp-for="Email" for="emailFloating" class="control-label"></label>
+			<input asp-for="Email" id="emailFloating" class="form-control " />
+			<span asp-validation-for="Email" class="text-danger"></span>
+		</div>
 
-                <div class="form-group">
-                    <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" type="password" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
+		<div class="form-group">
+			<label asp-for="Password" class="control-label"></label>
+			<input asp-for="Password" class="form-control" type="password" />
+			<span asp-validation-for="Password" class="text-danger"></span>
+		</div>
 
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="RememberMe">
-                            <input asp-for="RememberMe" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
-                    </div>
-                </div>
+		<div class="form-group">
+			<div class="checkbox">
+				<label asp-for="RememberMe">
+					<input asp-for="RememberMe" />
+					@Html.DisplayNameFor(m => m.RememberMe)
+				</label>
+			</div>
+		</div>
 
-                <h6>@ViewBag.Error</h6>
-                <div class="form-group">
-                    <input type="submit" value="Login" class="btn btn-primary" />
-                </div>
-            </form>
-        </div>
-    </div>
-   </div>
-
+		<h6>@ViewBag.Error</h6>
+		<div class="form-group">
+			<input type="submit" value="Login" class="btn btn-primary" />
+		</div>
+	</form>
+</div>*@
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
 
 }
