--- a/TaskFour/Views/User/Register.cshtml
+++ b/TaskFour/Views/User/Register.cshtml
@@ -4,18 +4,19 @@
     ViewData["Title"] = "Registration";
 }
 
-<div class="container">
-    <h1>Register</h1>
-
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
+<div class="container col-md-4 bg-info p-4">
+    <h1 class="text-center">Register</h1>
+    <hr/>
+    <div>
+        <div class="">
             <form asp-action="Register">
-                <div asp-validation-summary="All" class="text-danger"></div>
+
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
+
                 <div class="form-group">
                     <label asp-for="Email" class="control-label"></label>
                     <input asp-for="Email" type="email" class="form-control" />
@@ -34,9 +35,16 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
               
-                <div class="form-group">
+             @*   <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
+                </div>*@
+                <div class="container">
+					<div class="row">
+						<div class="col text-center">
+							<button class="btn btn-primary">Create</button>
+						</div>
+					</div>
+				</div>
             </form>
         </div>
     </div>
