--- a/TaskFour/Views/Shared/_Layout.cshtml
+++ b/TaskFour/Views/Shared/_Layout.cshtml
@@ -11,35 +11,29 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 </head>
-<body>
+<body class="bg-white">
     <header>
         <nav id="navbar" class="navbar navbar-expand navbar-light bg-white border-bottom box-shadow">
-            <div class="container bg-info">
+            <div class="container bg-success p-1">
                 <div class="">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ">
                         @if (signManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link text-white " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Danger">Danger</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Info">Info</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Info">Admin</a>
                             </li>
 
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Danger">Danger</a>
+                                <a class="nav-link text-white " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                                <li class="nav-item">
-                                <a class="nav-link text-dark disabled" asp-area="" asp-controller="User" asp-action="Info">Info</a>
+                                <a class="nav-link disabled" asp-area="" asp-controller="User" asp-action="Info">Admin</a>
                             </li>
                         }
                         
@@ -53,8 +47,8 @@
                         {
                             <li class="nav-item">
                                 <form method="post" asp-action="Logout" asp-controller="user">
-                                    <button type="submit" class="nav-link btn btn-link" style="width:auto">
-                                        Log Out  @User.Identity.Name
+                                    <button type="submit" class="nav-link btn btn-link text-white" style="width:auto">
+                                        Logout <b>@User.Identity.Name</b>
                                     </button>
                                 </form>
                             </li>
@@ -62,10 +56,10 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Sign in</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Login">Sign in</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Register">Sign up</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Register">Sign up</a>
                             </li>
                         }
                     </ul>
