--- a/TaskFour/wwwroot/css/Login.css
+++ b/TaskFour/wwwroot/css/Login.css
@@ -1,83 +1,115 @@
-﻿:root {
-    --font: 'Source Sans Pro', sans-serif;
-    --font2: 'Patrick Hand', cursive;
-    ;
+﻿body {
+    background-image: url('~/css/login-img.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.container1 {
-    width: 70%;
-    margin-left:15%;
-    height: 70%;
-    margin-top:5%;
-    background: rgb(30, 210, 66);
-    align-items: center;
+a:hover {
+    text-decoration: none;
+}
+
+.container {
+    margin-top: 80px;
+    min-height: 604px;
+}
+
+.login-form {
+    background-color: #8e78dc;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+
+    .login-form h4 {
+        text-align: center;
+        font-weight: 600;
+        color: #fff;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
+    .login-form svg {
+        color: #fec40b;
+        margin-top: -69px;
+        margin-left: 6px;
+    }
+
+    .login-form input {
+        padding-left: 30px;
+    }
+
+        .login-form input:focus {
+            box-shadow: none !important;
+            border-color: #fff !important;
+        }
+
+.remember-forgot-div {
     display: flex;
-    justify-content: center
+    justify-content: space-between;
+    font-size: 12px;
+    color: #fff;
 }
 
-    .container1 > .first {
-        width: 290px;
-        height: 500px;
-        background-color: rgb(22, 199, 10);
-        border-radius: 0.5rem;
+    .remember-forgot-div a {
+        color: #fff;
     }
 
-        .container1 > .first h3 {
-            margin: 2% 0;
-            padding-left: 41%;
-            font-family: var(--font);
-            font-size: 2rem;
-        }
+.form-check-input {
+    margin-top: 2px !important;
+}
 
-        .container1 > .first input {
-            width: 80%;
-            height: 2rem;
-            margin-top: 20%;
-            margin-left: 11%;
-            outline: none;
-            border: none;
-            border-radius: 2rem;
-            text-align: center;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        }
+.login-btn {
+    margin-top: 40px;
+    border-radius: 10px;
+}
 
-        .container1 > .first button {
-            width: 130px;
-            height: 30px;
-            margin-top: 70%;
-            margin-left: 5%;
-            outline: none;
-            border: none;
-            border-radius: 1rem;
-            font-family: var(--font);
-            font-size: 1.3rem;
-            font-weight: 700;
-            background-color: blue;
-        }
-
-            .container1 > .first button:hover {
-                background: rgb(34, 34, 170);
-                box-shadow: 0 0 6px 7px rgb(59, 59, 255);
-                color: white;
-                transition: .3s ease;
-            }
-
-    .container1 > .second {
-        width: 290px;
-        height: 500px;
-        background: rgb(30, 210, 66);
+    .login-btn input {
+        font-weight: 600;
+        background-color: #fec40b !important;
+        border-color: #fec40b !important;
     }
 
-        .container1 > .second img {
-            margin-top: 45%;
-            margin-left: 30%;
-            width: 400px;
-            height: 400px;
-            border-radius: 45%;
+        .login-btn input:focus {
+            box-shadow: none !important;
+            border-color: #fec40b !important;
         }
 
-            .container1 > .second img:hover {
-                margin-top: 46%;
-                transform: skewX(25deg);
-                transition: .4s ease-in-out;
-            }
+.sign-up-div {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 12px;
+}
+
+    .sign-up-div a {
+        color: #8e78dc !important;
+        font-weight: 600;
+    }
+
+.copyright {
+    text-align: center;
+    padding: 20px;
+    font-size: 16px;
+}
+
+    .copyright a {
+        color: #ef1829;
+        font-weight: bold;
+    }
+
+        .copyright a:hover {
+            color: #ef1829;
+        }
+
+
+/************************** media query 1024px *******************/
+@media only screen and (max-width: 1024px) {
+    .login-form {
+        margin-top: 0px;
+    }
+}
+/************************** media query 812px *******************/
+@media only screen and (max-width: 812px) {
+    .pic-login-3 {
+        display: none;
+    }
+}
