Deleted some unnecessary comments

--- a/TaskFour/Views/Shared/_Layout.cshtml
+++ b/TaskFour/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
 </head>
 <body class="bg-white">
     <header>
-        <nav id="navbar" class="navbar navbar-expand navbar-light bg-white border-bottom box-shadow">
-            <div class="container bg-success p-1">
+        <nav id="navbar" class="navbar navbar-expand navbar-light  border-bottom box-shadow">
+            <div class="container bg-success p-1 rounded-top">
                 <div class="">
                     <ul class="navbar-nav ">
                         @if (signManager.IsSignedIn(User))
