--- a/TaskFour/Views/User/Login.cshtml
+++ b/TaskFour/Views/User/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@model Task_4_Itransion.Models.User*@
-@model TaskFour.ViewModels.LoginViewModel
+@model LoginViewModel
 
 @{
 	ViewData["Title"] = "Login";
